--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,5 @@
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:supportsRtl="true"
-                 android:theme="@style/AppTheme"/>
+                 android:supportsRtl="true"/>
 </manifest>
