--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compileOnly "com.squareup.okhttp3:okhttp:4.1.0"
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'com.google.code.gson:gson:2.8.5'
 }
