--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,14 @@ jobs:
     docker:
       - image: rishabhpoddar/android-node-mysql-git
     steps:
+      - run: (cd / && ./runMySQL.sh)
+      - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
+      - run: mysql -u root --password=root -e "set global max_connections = 10000;"
       - checkout
+      - run: cd backend/ && npm i -d && ./node_modules/.bin/tsc -p tsconfig.json
+      - run: 
+          command: cd backend/ && TEST_MODE=testing node build/index.js
+          background: true
       - run: ./gradlew clean build bintrayUpload -PbintrayUser=supertokens -PbintrayKey=$BINTRAY_KEY -PdryRun=false
   test:
     docker: 
