--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,15 +19,11 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
+      - checkout
       - run: (cd / && ./runMySQL.sh)
       - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
       - run: mysql -u root --password=root -e "set global max_connections = 10000;"
-      - checkout
-      - run: cd backend/ && npm i -d && ./node_modules/.bin/tsc -p tsconfig.json
-      - run: 
-          command: cd backend/ && TEST_MODE=testing node build/index.js
-          background: true
-      - run: ./gradlew test
+      - run: (cd .circleci/ && ./doTests.sh)
 
 workflows:
   version: 2
@@ -41,7 +37,6 @@ workflows:
               ignore: /.*/
       - test:
           filters:
-            tags:
-              only: /dev-v[0-9]+(\.[0-9]+)*/
             branches:
-              ignore: /.*/
+              only:
+                - "0.2"
