--- a/testHelpers/docker/Dockerfile
+++ b/testHelpers/docker/Dockerfile
@@ -1,4 +1,15 @@
-FROM rishabhpoddar/node-mysql-git
+FROM rishabhpoddar/supertokens_node_driver_testing
+
+ENV SDK_URL="https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" \
+   ANDROID_HOME="/usr/local/android-sdk" \
+   ANDROID_VERSION=28 \
+   ANDROID_BUILD_TOOLS_VERSION=28.0.3
+
+RUN mkdir "$ANDROID_HOME" .android \
+   && cd "$ANDROID_HOME" \
+   && curl -o sdk.zip $SDK_URL
+
+RUN apt-get install unzip
 
 # Install OpenJDK-8
 RUN apt-get update && \
@@ -16,17 +27,6 @@ RUN apt-get update && \
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
 RUN export JAVA_HOME
 
-ENV SDK_URL="https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" \
-   ANDROID_HOME="/usr/local/android-sdk" \
-   ANDROID_VERSION=28 \
-   ANDROID_BUILD_TOOLS_VERSION=28.0.3
-
-RUN mkdir "$ANDROID_HOME" .android \
-   && cd "$ANDROID_HOME" \
-   && curl -o sdk.zip $SDK_URL
-
-RUN apt-get install unzip
-
 RUN cd "$ANDROID_HOME" && unzip sdk.zip \
    && rm sdk.zip \
    && yes | $ANDROID_HOME/tools/bin/sdkmanager --licenses
@@ -36,3 +36,5 @@ RUN $ANDROID_HOME/tools/bin/sdkmanager --update
 RUN $ANDROID_HOME/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" \
    "platforms;android-${ANDROID_VERSION}" \
    "platform-tools"
+
+RUN apt-get install -y jq
