--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,8 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
+      - run: update-alternatives --set java /usr/java/jdk-12.0.2/bin/java
+      - run: export JAVA_HOME=/usr/java/jdk-12.0.2/
       - checkout
       - run: (cd / && ./runMySQL.sh)
       - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
