--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - run: update-alternatives --set java /usr/java/jdk-12.0.2/bin/java
+      - run: update-java-alternatives -s jdk-12.0.2
       - run: export JAVA_HOME=/usr/java/jdk-12.0.2/
       - run: export PATH=$PATH:$JAVA_HOME
       - checkout
