--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - run: mv /usr/java/jdk-12.0.2 /usr/lib/jvm/
-      - run: update-java-alternatives -s jdk-12.0.2/
-      - run: export JAVA_HOME=/usr/lib/jvm/jdk-12.0.2/
+      - run: update-alternatives --set java /usr/java/jdk-12.0.2/bin/java
+      - run: export JAVA_HOME=/usr/java/jdk-12.0.2/
       - run: export PATH=$PATH:$JAVA_HOME
+      - run: java -version
       - checkout
       - run: (cd / && ./runMySQL.sh)
       - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
