--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ jobs:
       JVM_OPTS: -Xmx3200m
     steps:
       - run: update-alternatives --set java /usr/java/jdk-12.0.2/bin/java
+        - - run: update-alternatives --set javac /usr/java/jdk-12.0.2/bin/javac
       - run: export JAVA_HOME=/usr/java/jdk-12.0.2/
       - run: export PATH=$PATH:$JAVA_HOME
-      - run: java -version
       - checkout
       - run: (cd / && ./runMySQL.sh)
       - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
