--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       JVM_OPTS: -Xmx3200m
     steps:
       - run: update-alternatives --set java /usr/java/jdk-12.0.2/bin/java
-        - - run: update-alternatives --set javac /usr/java/jdk-12.0.2/bin/javac
+      - run: update-alternatives --set javac /usr/java/jdk-12.0.2/bin/javac
       - run: export JAVA_HOME=/usr/java/jdk-12.0.2/
       - run: export PATH=$PATH:$JAVA_HOME
       - checkout
