--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - run: update-alternatives --set java /usr/java/jdk-12.0.2/bin/java
-      - run: update-alternatives --set javac /usr/java/jdk-12.0.2/bin/javac
+      - run: update-alternatives --install "/usr/bin/java" "java" "/usr/java/jdk-12.0.2/bin/java" 1
+      - run: update-alternatives --install "/usr/bin/javac" "javac" "/usr/java/jdk-12.0.2/bin/javac" 1
       - run: export JAVA_HOME=/usr/java/jdk-12.0.2/
-      - run: export PATH=$PATH:$JAVA_HOME
+      - run: export JRE_HOME=/usr/java/jdk-12.0.2/
       - checkout
       - run: (cd / && ./runMySQL.sh)
       - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
