--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
       - run: echo 'export PATH' >> /etc/profile
       - run: update-alternatives --install "/usr/bin/java" "java" "/usr/java/jdk-12.0.2/bin/java" 1
       - run: update-alternatives --install "/usr/bin/javac" "javac" "/usr/java/jdk-12.0.2/bin/javac" 1
+      - run: source /etc/profile
       - run: echo $JAVA_HOME
       - run: java -version
       - checkout
