--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       JVM_OPTS: -Xmx3200m
     steps:
       - run: echo 'JAVA_HOME=/usr/java/jdk-12.0.2' >> /etc/profile
+      - run: echo $JAVA_HOME
       - run: echo 'PATH=$PATH:$HOME/bin:$JAVA_HOME/bin' >> /etc/profile
       - run: echo 'export JAVA_HOME' >> /etc/profile
       - run: echo 'export JRE_HOME' >> /etc/profile
