changes to frontend testing to use 401

--- a/testHelpers/server/package.json
+++ b/testHelpers/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ios-backend",
+    "name": "android-backend",
     "version": "0.0.1",
     "description": "Backend for ios",
     "dependencies": {
