--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
-def publishVersionID = '0.1.0'
+def publishVersionID = '0.1.1'
 
 android {
     compileSdkVersion 32
@@ -28,7 +28,7 @@ android {
                 release(MavenPublication) {
                     groupId = 'com.supertokens'
                     artifactId = 'session'
-                    version = '0.1.0'
+                    version = publishVersionID
 
                     from components.release
                 }
