--- a/testHelpers/testapp/app/build.gradle
+++ b/testHelpers/testapp/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     testImplementation 'com.squareup.retrofit2:retrofit:2.3.0'
     testImplementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     testImplementation 'org.json:json:20220320'
-    compile files('../../app/build/outputs/aar/app-debug.aar')
+    compile files('../../../app/build/outputs/aar/app-debug.aar')
 }
