--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,13 @@
 version: 2.1
+
+# this allows you to use CircleCI's dynamic configuration feature
+setup: true
+
 orbs:
+  continuation: circleci/continuation@0.1.2
   slack: circleci/slack@3.4.2
+  jq: circleci/jq@2.2.0
 jobs:
-  publish:
-    docker:
-      - image: rishabhpoddar/supertokens_android_sdk_testing
-    steps:
-      - checkout
-      - run: ./gradlew clean build -x test bintrayUpload -PbintrayUser=supertokens -PbintrayKey=$BINTRAY_KEY -PdryRun=false
-      - slack/status
   test:
     docker: 
       - image: rishabhpoddar/supertokens_android_sdk_testing
@@ -16,23 +15,25 @@ jobs:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout
-      - run: (cd / && ./runMySQL.sh)
-      - run: mysql -u root --password=root -e "CREATE DATABASE auth_session;"
-      - run: mysql -u root --password=root -e "set global max_connections = 10000;"
-      - run: (cd .circleci/ && ./doTests.sh)
+      - run:
+          name: Generate config
+          command: cd .circleci && ./generateConfig.sh
+      - continuation/continue:
+          configuration_path: .circleci/config_continue.yml
+  update-docs:
+    docker:
+      - image: rishabhpoddar/supertokens_website_sdk_testing_node_16
+    steps:
+      - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/ # This makes npm use http instead of ssh (required for node 16)
+      - checkout
+      - run: cd ../ && git clone git@github.com:supertokens/supertokens-backend-website.git
+      - run: (cd .circleci && ./updateDocsInWebsite.sh)
       - slack/status
+
 workflows:
   version: 2
   tagged-build:
     jobs:
-      - publish:
-          context:
-            - slack-notification
-          filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
       - test:
           context:
             - slack-notification
@@ -41,3 +42,10 @@ workflows:
               only: /dev-v[0-9]+(\.[0-9]+)*/
             branches:
               ignore: /.*/
+      # - update-docs:
+      #     context:
+      #         - slack-notification
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
