--- a/testHelpers/testapp/app/build.gradle
+++ b/testHelpers/testapp/app/build.gradle
@@ -52,12 +52,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:4.8.0'
     testImplementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'com.squareup.okhttp3:okhttp:4.1.0'
     testImplementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     testImplementation 'com.squareup.retrofit2:retrofit:2.3.0'
     testImplementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     testImplementation 'org.json:json:20220320'
-    compile files('../../app/build/outputs/aar/app-debug.aar')
+    compile files('../../../app/build/outputs/aar/app-debug.aar')
 }
