--- a/.circleci/config_continue.yml
+++ b/.circleci/config_continue.yml
@@ -22,7 +22,11 @@ jobs:
     steps:
       - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/ # This makes npm use http instead of ssh (required for node 16)
       - checkout
-      - run: apt-get update && apt-get upgrade -y
+      - run: apt-get clean
+      - run: apt-get purge mysql* -y
+      - run: apt-get update
+      - run: apt-get install -f
+      - run: apt-get upgrade -y
       - run: update-ca-certificates -f
       - run: cd / && wget https://download.java.net/java/GA/jdk15.0.1/51f4f36ad4ef43e39d0dfdbaf6549e32/9/GPL/openjdk-15.0.1_linux-x64_bin.tar.gz
       - run: cd / && mv openjdk-15.0.1_linux-x64_bin.tar.gz /usr/java
