--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,6 @@
           package="com.supertokens.session">
 
     <application android:allowBackup="true"
-                 android:label="@string/app_name"
+                 android:label="SuperTokensAndroid(Unused)"
                  android:supportsRtl="true"/>
 </manifest>
