--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,26 @@ android {
             }
         }
     }
+
+    libraryVariants.all { variant ->
+
+        task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
+            title = "Documentation for Android $android.defaultConfig.versionName b$android.defaultConfig.versionCode"
+            destinationDir = new File("${project.getProjectDir()}/../docs")
+            source = variant.javaCompile.source
+
+            ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+            doFirst { classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar) }
+
+            description "Generates Javadoc for $variant.name."
+
+            options.memberLevel = org.gradle.external.javadoc.JavadocMemberLevel.PUBLIC
+            options.links("http://docs.oracle.com/javase/7/docs/api/");
+            options.links("http://developer.android.com/reference/");
+            exclude '**/BuildConfig.java'
+            exclude '**/R.java'
+        }
+    }
 }
 
 dependencies {
