--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,13 @@ jobs:
           configuration_path: .circleci/config_continue.yml
   update-docs:
     docker:
-      - image: rishabhpoddar/supertokens_website_sdk_testing_node_16
+      - image: rishabhpoddar/supertokens_android_sdk_testing
     steps:
       - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/ # This makes npm use http instead of ssh (required for node 16)
       - checkout
+      - run: ./gradlew generateReleaseJavadoc
       - run: cd ../ && git clone git@github.com:supertokens/supertokens-backend-website.git
-      - run: (cd .circleci && ./updateDocsInWebsite.sh)
+      - run: (cd .circleci && ./updateDocsInWebsite)
       - slack/status
 
 workflows:
@@ -42,10 +43,11 @@ workflows:
               only: /dev-v[0-9]+(\.[0-9]+)*/
             branches:
               ignore: /.*/
-      # - update-docs:
-      #     context:
-      #         - slack-notification
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
+      - update-docs:
+          context:
+              - slack-notification
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
